--- a/app/src/main/res/layout/activity_tank_management.xml
+++ b/app/src/main/res/layout/activity_tank_management.xml
@@ -30,6 +30,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Stop"/>
+        android:text="Stop"
+        android:id="@+id/stop"/>
 
 </LinearLayout>
