--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,6 +4,5 @@
     <item
         android:id="@+id/logout"
         android:title="@string/logout"
-        app:showAsAction="always"
-        />
+        app:showAsAction="always" />
 </menu>
