--- a/app/src/main/res/layout/fragment_crop.xml
+++ b/app/src/main/res/layout/fragment_crop.xml
@@ -7,8 +7,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/max"
@@ -19,7 +19,8 @@
             android:layout_marginRight="10dp"
             android:gravity="center"
             android:hint="Maximum Moisture"
-            android:inputType="number" />
+            android:inputType="number"
+            android:maxLength="3" />
 
         <EditText
             android:id="@+id/min"
@@ -30,7 +31,8 @@
             android:layout_marginRight="10dp"
             android:gravity="center"
             android:hint="Minimum Moisture"
-            android:inputType="number" />
+            android:inputType="number"
+            android:maxLength="3" />
 
         <Button
             android:id="@+id/setminmax"
